--- a/requirements.txt
+++ b/requirements.txt
@@ -3,11 +3,10 @@ matplotlib==3.7.1
 numpy==1.24.3
 online_triplet_loss==0.0.6
 Pillow==9.5.0
-Pillow==9.5.0
 prettytable==3.7.0
 pytorch_lightning==2.0.1.post0
-PyYAML==6.0
 PyYAML==6.0
 scikit_learn==1.2.2
 torch==2.0.0
 torchvision==0.15.1
+torchmetrics~=0.11.4
