--- a/experiments/experiment5/config.yml
+++ b/experiments/experiment5/config.yml
@@ -1,11 +1,9 @@
-# Test 2 (takes too long)
+# In this experiment we evaluate independence losses
 
 dataset:
     - CIFAR10
     - Oxford5k
-    - GoogleLandmarks
 model:
-    - AlexNet
     - ResNet18
     - ViT
 embedding_dim:
@@ -18,13 +16,11 @@ independence_loss:
     - CorrMatLoss
 regularization_loss:
     - null
-    - L1
 classification_loss:
     - Enable
-    - Disable
 margin:
     - 0.2
-num_epochs_in_step: 1
+num_epochs_in_step: 5
 num_epoch_steps: 1
 batch:
     - 5/5
