--- a/experiments/experiment2/config.yml
+++ b/experiments/experiment2/config.yml
@@ -1,29 +1,24 @@
-# Test 2 (takes too long)
-
+# Test 2
 dataset:
     - CIFAR10
     - Oxford5k
     - GoogleLandmarks
 model:
-    - AlexNet
     - ResNet18
-    - ViT
 embedding_dim:
     - 1024
+num_unfrozen_layers:
+    - All
+whitening:
+    - ZCA
 independence_loss:
     - null
-    - NegApproxLoss1
-    - NegApproxLoss2
-    - KurtosisLoss
-    - CorrMatLoss
 regularization_loss:
     - null
-    - L1
 classification_loss:
     - Enable
-    - Disable
 margin:
-    - 0.2
+    - 0.5
 num_epochs_in_step: 1
 num_epoch_steps: 1
 batch:
@@ -34,5 +29,10 @@ track_metric:
     - P@5
     - P@10
     - MAP
+    - Independence
+    - Sparsity
+plot_hist_metric:
+    - P@1
+    - P@10
     - Independence
     - Sparsity
