--- a/experiments/experiment7/config.yml
+++ b/experiments/experiment7/config.yml
@@ -1,4 +1,4 @@
-# Estimate how models perform with/without classification loss and number of epochs
+# Find the best whitening
 dataset:
     - CIFAR10
 model:
@@ -6,20 +6,21 @@ model:
 embedding_dim:
     - 1024
 num_unfrozen_layers:
-    - All
+    - 3
 whitening:
     - Disable
+    - ZCA
+    - DBN
 independence_loss:
-    - null
+    - NegApproxLoss1
 regularization_loss:
     - null
 classification_loss:
-    - Disable
     - Enable
 margin:
     - 0.2
-num_epochs_in_step: 5
-num_epoch_steps: 3
+num_epochs_in_step: 3
+num_epoch_steps: 2
 batch:
     - 10/10
 track_metric:
