--- a/experiments/experiment6/config.yml
+++ b/experiments/experiment6/config.yml
@@ -1,25 +1,30 @@
-# In this experiment we evaluate regularization loss
-
+# Find the best independence loss
 dataset:
     - CIFAR10
-    - Oxford5k
 model:
     - ResNet18
-    - ViT
 embedding_dim:
     - 1024
+num_unfrozen_layers:
+    - 3
+whitening:
+    - Disable
 independence_loss:
     - null
+    - NegApproxLoss1
+    - NegApproxLoss2
+    - KurtosisLoss
+    - CorrMatLoss
 regularization_loss:
-    - L1
+    - null
 classification_loss:
     - Enable
 margin:
     - 0.2
-num_epochs_in_step: 5
-num_epoch_steps: 1
+num_epochs_in_step: 3
+num_epoch_steps: 2
 batch:
-    - 5/5
+    - 10/10
 track_metric:
     - P@1
     - P@3
