--- a/experiments/experiment/config.yml
+++ b/experiments/experiment/config.yml
@@ -1,4 +1,4 @@
-# Independence loss with larger batch size
+# Find best batch size for model with independence loss.
 dataset:
     - CIFAR10
 model:
@@ -6,11 +6,10 @@ model:
 embedding_dim:
     - 1024
 num_unfrozen_layers:
-    - All
+    - 1
 whitening:
-    - Disable
+    - ZCA
 independence_loss:
-    - null
     - NegApproxLoss1
 regularization_loss:
     - null
@@ -19,9 +18,11 @@ classification_loss:
 margin:
     - 0.2
 num_epochs_in_step: 1
-num_epoch_steps: 15
+num_epoch_steps: 5
 batch:
     - 10/40
+    - 10/10
+    - 5/5
 track_metric:
     - P@1
     - P@3
