--- a/experiments/experiment2_1/config.yml
+++ b/experiments/experiment2_1/config.yml
@@ -1,13 +1,13 @@
-# Find the best number of unfrozen layers
+# Estimate models best batch size without independence loss
 dataset:
     - CIFAR10
 model:
+    - AlexNet
     - ResNet18
+    - ViT
 embedding_dim:
     - 1024
 num_unfrozen_layers:
-    - 1
-    - 3
     - All
 whitening:
     - Disable
@@ -20,8 +20,10 @@ classification_loss:
 margin:
     - 0.2
 num_epochs_in_step: 3
-num_epoch_steps: 2
+num_epoch_steps: 1
 batch:
+    - 5/5
+    - 10/5
     - 10/10
 track_metric:
     - P@1
