--- a/experiments/experiment2_3/config.yml
+++ b/experiments/experiment2_3/config.yml
@@ -1,4 +1,4 @@
-# Independence loss with larger batch size
+# Find the best number of unfrozen layers for model without independence loss
 dataset:
     - CIFAR10
 model:
@@ -7,20 +7,22 @@ embedding_dim:
     - 1024
 num_unfrozen_layers:
     - 1
+    - 3
+    - All
 whitening:
-    - ZCA
+    - Disable
 independence_loss:
-    - NegApproxLoss1
+    - null
 regularization_loss:
     - null
 classification_loss:
     - Enable
 margin:
     - 0.2
-num_epochs_in_step: 1
-num_epoch_steps: 3
+num_epochs_in_step: 3
+num_epoch_steps: 2
 batch:
-    - 10/40
+    - 10/10
 track_metric:
     - P@1
     - P@3
