--- a/experiments/experiment3_1/config.yml
+++ b/experiments/experiment3_1/config.yml
@@ -1,4 +1,4 @@
-# Compare no independence loss with independence loss with larger constant
+# Run independence losses without whitening for all layers.
 dataset:
     - CIFAR10
 model:
@@ -12,6 +12,9 @@ whitening:
 independence_loss:
     - null
     - NegApproxLoss1
+    - NegApproxLoss2
+    - KurtosisLoss
+    - CorrMatLoss
 regularization_loss:
     - null
 classification_loss:
