--- a/experiments/experiment3_6/config.yml
+++ b/experiments/experiment3_6/config.yml
@@ -1,30 +1,28 @@
-# For all datasets, run all models with regularization or with no specific loss at all
+# Find best batch size for model with independence loss.
 dataset:
     - CIFAR10
-    - Oxford5k
-    - GoogleLandmarks
 model:
     - ResNet18
-    - ViT
 embedding_dim:
     - 1024
 num_unfrozen_layers:
-    - 3
+    - 1
 whitening:
-    - Disable
+    - ZCA1
 independence_loss:
-    - null
+    - NegApproxLoss1
 regularization_loss:
     - null
-    - L1
 classification_loss:
     - Enable
 margin:
     - 0.2
-num_epochs_in_step: 3
-num_epoch_steps: 2
+num_epochs_in_step: 1
+num_epoch_steps: 5
 batch:
+    - 10/40
     - 10/10
+    - 5/5
 track_metric:
     - P@1
     - P@3
