--- a/experiments/experiment3_8/config.yml
+++ b/experiments/experiment3_8/config.yml
@@ -1,4 +1,4 @@
-# Remove whitening, unfreeze single layer.
+# Find best whitening.
 dataset:
     - CIFAR10
 model:
@@ -8,7 +8,8 @@ embedding_dim:
 num_unfrozen_layers:
     - 1
 whitening:
-    - null
+    - ZCA1
+    - ZCA2
 independence_loss:
     - NegApproxLoss1
 regularization_loss:
