--- a/experiments/experiment/config.yml
+++ b/experiments/experiment/config.yml
@@ -8,7 +8,7 @@ embedding_dim:
 num_unfrozen_layers:
     - 1
 whitening:
-    - null
+    - Disable
 independence_loss:
     - NegApproxLoss1
 regularization_loss:
