--- a/experiments/experiment3_10/config.yml
+++ b/experiments/experiment3_10/config.yml
@@ -1,11 +1,10 @@
-# Check best batch size and embedding dimension
+# Remove L2, check classification loss, increase number of epochs.
 dataset:
     - CIFAR10
 model:
     - ResNet18
 embedding_dim:
     - 1024
-    - 128
 num_unfrozen_layers:
     - 1
 whitening:
@@ -16,14 +15,13 @@ regularization_loss:
     - null
 classification_loss:
     - Enable
+    - Disable
 margin:
     - 0.2
 num_epochs_in_step: 1
 num_epoch_steps: 10
 batch:
     - 10/40
-    - 10/10
-    - 5/5
 track_metric:
     - P@1
     - P@3
