--- a/experiments/experiment3_14/config.yml
+++ b/experiments/experiment3_14/config.yml
@@ -1,29 +1,29 @@
-# Final experiment for models with decorrelation loss or no loss at all
+# Decrease independence loss constant; compare batch size and whether to use classification loss or not.
 dataset:
     - CIFAR10
-    - Oxford5k
 model:
     - ResNet18
-    - ViT
 embedding_dim:
     - 1024
 num_unfrozen_layers:
-    - All
+    - 1
 whitening:
-    - Disable
+    - ZCA2
 independence_loss:
-    - null
-    - CorrMatLoss
+    - NegApproxLoss1
 regularization_loss:
     - null
 classification_loss:
     - Enable
+    - Disable
 margin:
     - 0.2
 num_epochs_in_step: 1
-num_epoch_steps: 10
+num_epoch_steps: 50
 batch:
+    - 10/40
     - 10/10
+    - 5/5
 track_metric:
     - P@1
     - P@3
