--- a/experiments/exp11/config.yml
+++ b/experiments/exp11/config.yml
@@ -1,12 +1,15 @@
-# Find best batch size for a model without additional losses
+# Check models with no additional loss on a single layer.
 dataset:
     - CIFAR10
+    - Oxford5k
 model:
+    - AlexNet
     - ResNet18
+    - ViT
 embedding_dim:
     - 1024
 num_unfrozen_layers:
-    - All
+    - 1
 whitening:
     - Disable
 independence_loss:
@@ -18,10 +21,8 @@ classification_loss:
 margin:
     - 0.2
 num_epochs_in_step: 1
-num_epoch_steps: 3
+num_epoch_steps: 5
 batch:
-    - 5/5
-    - 10/5
     - 10/10
 track_metric:
     - P@1
