--- a/experiments/exp6/config.yml
+++ b/experiments/exp6/config.yml
@@ -1,4 +1,4 @@
-# Find best batch size for a model without additional losses
+# Find best whitening for a model with independence loss.
 dataset:
     - CIFAR10
 model:
@@ -6,11 +6,13 @@ model:
 embedding_dim:
     - 1024
 num_unfrozen_layers:
-    - All
+    - 1
 whitening:
     - Disable
+    - ZCA1
+    - ZCA2
 independence_loss:
-    - null
+    - NegApproxLoss1
 regularization_loss:
     - null
 classification_loss:
@@ -20,9 +22,7 @@ margin:
 num_epochs_in_step: 1
 num_epoch_steps: 3
 batch:
-    - 5/5
-    - 10/5
-    - 10/10
+    - 10/40
 track_metric:
     - P@1
     - P@3
