--- a/experiments/exp7/config.yml
+++ b/experiments/exp7/config.yml
@@ -1,8 +1,11 @@
-# Find best batch size for a model without additional losses
+# Results for models with decorrelation loss and no loss at all.
 dataset:
     - CIFAR10
+    - Oxford5k
 model:
+    - AlexNet
     - ResNet18
+    - ViT
 embedding_dim:
     - 1024
 num_unfrozen_layers:
@@ -11,6 +14,7 @@ whitening:
     - Disable
 independence_loss:
     - null
+    - CorrMatLoss
 regularization_loss:
     - null
 classification_loss:
@@ -18,10 +22,8 @@ classification_loss:
 margin:
     - 0.2
 num_epochs_in_step: 1
-num_epoch_steps: 3
+num_epoch_steps: 5
 batch:
-    - 5/5
-    - 10/5
     - 10/10
 track_metric:
     - P@1
