--- a/experiments/exp12/config.yml
+++ b/experiments/exp12/config.yml
@@ -1,4 +1,4 @@
-# Checking a model with independence loss on all layers and no whitening.
+# Checking a model with independence loss with different combinations of number of layers and whitening.
 dataset:
     - CIFAR10
 model:
@@ -6,9 +6,11 @@ model:
 embedding_dim:
     - 1024
 num_unfrozen_layers:
+    - 1
     - All
 whitening:
     - Disable
+    - ZCA2
 independence_loss:
     - NegApproxLoss1
 regularization_loss:
@@ -17,15 +19,15 @@ classification_loss:
     - Enable
 margin:
     - 0.2
-num_epochs_in_step: 1
-num_epoch_steps: 5
+num_epochs_in_step: 2
+num_epoch_steps: 3
 batch:
-    - 10/40
+    - 10/10
 track_metric:
     - P@1
     - P@3
     - P@5
     - P@10
     - MAP
-    - Independence
+    - Correlation
     - Sparsity
